--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -77,143 +77,208 @@ Dernière modification : 15-06-2020
     </a>
 
 </div>
-<!--section bannière-
-<section id="section1">
-    <div class="container-fluid text-center" id="banniere">
-        <div class="row">
-            <div class="col-xl-12">
 
-            </div>
-        </div>
-    </div>
-</section>
--->
 <!--section bannière- -->
 <section id="section2">
     <div class="container-fluid text-center parallax" id="partie2">
         <div class="row">
             <div class="col-12 col-xl-6 offset-xl-3">
-                <h1> Bienvenue dans le diocèse de Kpalimé!</h1> <br/>  <h1> Nous sommes le peuple qu"il conduit de sa main </h1>
+                <h1> Bienvenue dans le diocèse de Kpalimé!</h1> <br/>
                 <hr id="separation2">
+                <h1> Nous sommes le peuple qu"il conduit de sa main </h1>
             </div>
         </div>
     </div>
 </section>
+<section id="section3">
+    <div class="container-fluid text-center">
+        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal" >
+            COVID 19: Connaitre l'horaire et les lieux de culte
+        </button>
+    </div>
+    <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-center">Horaire et Lieux de Cultes en période de Covid</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p> Cathédral : 9h30 et 11h 30 </p><br>
+                    <p> Paroisse immaculée Conception : 9h30 et 11h 30 </p><br>
+                    <p> Paroisse Sacré coeur : 9h30 et 11h 30 </p> <br>
+                    <p> Paroisse Sacré  : 9h30 et 11h 30</p> <br>
+                    <button type="button" class="Button">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+
+</section>
 
 <section id="section3">
     <div class="container  text-center">
-        <div class="row" id="atYourService">
+        <div class="row" id="Actualites">
             <div class="col-12">
                 <h1> Actualités</h1>
                 <hr>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-md-6 col-xl-3  ">
+            <div class="col-12 col-md-6 col-xl-3  p-3">
                 <img src="img/Alowonou_Papae.jpg" height="245" width="245"/>
                 <h4>Mgr Alowonou à Rome</h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
                 <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
-            <div class="col-12 col-md-6 col-xl-3  ">
+            <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/Kpalime4.jpg" height="245" width="245"/>
                 <h4> Pentécôte 2020 </h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
                 <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
-            <div class="col-12 col-md-6 col-xl-3  ">
+            <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/Jubile_Argent0.jpg" height="245" width="245"/>
                 <h4> Jubilé d'Argent </h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
                 <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
-            <div class="col-12 col-md-6 col-xl-3 ">
+            <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/Jubile_Argent1.jpg" height="245" width="245"/>
                 <h4> JMJ à Tohoun </h4>
                 <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-                <button type="button" class="btn btn-success">Lire la suite</button>
+                <button type="button" class="btn btn-success ">Lire la suite</button>
             </div>
         </div>
     </div>
-
+    <div class="container text-center p-3">
+    <button type="button" class="btn btn-outline-secondary">Lire les autres actualtités </button>
+    </div>
 </section>
 
     <div class="container-fluid text-center parallax2" id="partie4">
 
         <div class="row">
-            <div class="col-12 col-xl-6 offset-xl-3">
-                <h2> Nous joindre </h2>
-                <h2> EVECHE BP 83, Kpalimé - Togo Kpalimé</h2>
-                <hr id="separation3">
-                <h2> Tel:  +228 24 41 03 45</h2>
-                <h2> Courriel:alowonoubenoit@yahoo.fr  </h2>
-            </div>
+
         </div>
     </div>
 </div>
 
-<section id="section3">
+
     <div class="container  text-center">
         <div class="row" id="Evenement">
             <div class="col-12">
-                <h1> Évenements à venir</h1>
+                <h1> Événements à venir</h1>
                 <hr>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-md-6 col-xl-3  ">
+            <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/DSCF4743.JPG" height="245" width="245"/>
                 <h4>Mgr Alowonou</h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
-            <div class="col-12 col-md-6 col-xl-3  ">
+            <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/ordinationDiaconal.jpg" height="245" width="245"/>
                 <h4> Publications </h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+
+                <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
-            <div class="col-12 col-md-6 col-xl-3  ">
+            <div class="col-12 col-md-6 col-xl-3 p-3">
                 <img src="img/Jubile_Argent1.jpg" height="245" width="245"/>
                 <h4> Enseignement</h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
-            <div class="col-12 col-md-6 col-xl-3 ">
+            <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/Kpalime_MgrBarrigah.jpg" height="245" width="245"/>
                 <h4> Café spirituel</h4>
                 <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
         </div>
     </div>
-<div class="container-fluid text-center" id="partie6">
+<div class="container-fluid text-center" id="partie7">
     <div class="row">
         <div class="col-12 col-xl-6 offset-xl-3">
             <h2> Nous joindre </h2>
-            <h2> EVECHE BP 83, Kpalimé - Togo Kpalimé</h2>
-            <hr id="separation4">
-            <h2> Tel:  +228 24 41 03 45</h2>
-            <h2>Courriel:alowonoubenoit@yahoo.fr</h2>
+            <form>
+                <div class="container-fluid">
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputEmail4">Courriel</label>
+                            <input type="email" class="form-control" id="inputEmail4" placeholder="Courriel">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputPassword4">Téléphone</label>
+                            <input type="password" class="form-control" id="inputPassword4" placeholder="Téléphone">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputAddress">Address</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                    </div>
+                    <div class="form-group">
+                        <label for="inputAddress2">Address 2</label>
+                        <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputCity">Ville</label>
+                            <input type="text" class="form-control" id="inputCity">
+                        </div>
+                        <div class="form-group col-xl-12">
+                            <label for="exampleFormControlTextarea1">Message</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+
+                    </div>
+                    <button type="submit" class="btn
+btn-primary">Soumettre</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
     <div class="piedpage">
         <div class="container-fluid text-center">
             <div class="row">
-                <div class="col-lg-4 col-sm-10 logo"> <img src="img/logo.png"/>
-
+                <div class="col-lg-4 col-sm-10 logo"> <img src="img/logo_cetogo.jpg"/>
                 </div>
                 <div class="col-lg-5 col-sm-10 logo">
                 </div>
-                <div class="col-lg-3 col-sm-10 sectionDroiteFooter"><h5>Invesco Habitation</h5>
-                    <p class="footerTexte">Diocèse de Kpalime <br>
-                      Bp 83 Kpalimé Togoß
-                        <br>
-                        Cell: 514 560-6872
-                        <br>
-                        courriel: alowonoubenoit@yahoo.fr</p>
-                    <i class="fab fa-facebook-square"></i>
+                <div class="col-lg-3 col-sm-10 sectionDroiteFooter"><h2>Diocèse de Kpalimé</h2>
+                    <h5> EVECHE BP 83, Kpalimé - Togo Kpalimé</h5>
+                    <h5> Tel:  +228 24 41 03 45</h5>
+                    <h5> Courriel:alowonoubenoit@yahoo.fr </h5>
+                    <div class="row">
+                        <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                            <img src="img/logo.png" alt="logo" id="piedPage"/>
+                        </div>
+                        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
+                            <i class="fab fa-twitter-square" id="Tweeter"></i>
+                        </div>
+                        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+                            <i class="fab fa-facebook-square" id="facebook"></i>
+                        </div>
+                        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+                            <i class="fab fa-instagram" id="Instagram"></i>
+                        </div>
+                        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
+                            <i class="fab fa-youtube-square" id="Youtube"></i>
+                        </div>
                 </div>
             </div>
             <div class="col-lg-12">
-                <p class="footerTexte2">Diocèse de Kpalime 2020 Tous droits réservés</p>
+                <p class="piedpage">Diocèse de Kpalimé 2020 Tous droits réservés</p>
             </div>
         </div>
     </div>
