--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -91,26 +91,49 @@ Dernière modification : 15-06-2020
     </div>
 </section>
 <section id="section3">
-    <div class="container-fluid text-center">
+    <div class="container-fluid text-center p-3">
         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal" >
-            COVID 19: Connaitre l'horaire et les lieux de culte
+           Ordination sacerdotale  Samedi 8 aout 2020 <br> Cliquez pour découvrez nos futurs prêtres
         </button>
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-center">Horaire et Lieux de Cultes en période de Covid</h5>
+                    <h5 class="modal-title text-center">Nos futurs prêtres</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p> Cathédral : 9h30 et 11h 30 </p><br>
-                    <p> Paroisse immaculée Conception : 9h30 et 11h 30 </p><br>
-                    <p> Paroisse Sacré coeur : 9h30 et 11h 30 </p> <br>
-                    <p> Paroisse Sacré  : 9h30 et 11h 30</p> <br>
-                    <button type="button" class="Button">
+                    <h2>Découvrez</h2><p>Nos futurs prêtres</p>
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <ul class="carousel-indicators">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                        </ul>
+                        <div class="carousel-inner"><div class="carousel-item active">
+                            <img class="img-fluid" src="img/AMEHE.png" alt="Amehe">
+                            <p>Abbé Théodore Améhé </p>
+                        </div>
+                            <div class="carousel-item">
+                                <img class="img-fluid" src="img/PaulDokpo.png" alt="Paul Dokpo">
+                                <p>Abbé Paul Dokpo </p>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="img-fluid" src="img/SetoWenceslas.png" alt="Seto Wenceslas">
+                                <p>Abbé Seto Wenceslas </p>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </a>
+                    </div>
+                    <!-- Fin du carousel -->
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -121,6 +144,11 @@ Dernière modification : 15-06-2020
     </div>
 
 </section>
+
+
+
+
+
 
 <section id="section3">
     <div class="container  text-center">
@@ -151,7 +179,7 @@ Dernière modification : 15-06-2020
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/Jubile_Argent1.jpg" height="245" width="245"/>
-                <h4> JMJ à Tohoun </h4>
+                <h4> JDJ à Tohoun </h4>
                 <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
                 <button type="button" class="btn btn-success ">Lire la suite</button>
             </div>
@@ -159,17 +187,9 @@ Dernière modification : 15-06-2020
     </div>
     <div class="container text-center p-3">
     <button type="button" class="btn btn-outline-secondary">Lire les autres actualtités </button>
+        <hr>
     </div>
 </section>
-
-    <div class="container-fluid text-center parallax2" id="partie4">
-
-        <div class="row">
-
-        </div>
-    </div>
-</div>
-
 
     <div class="container  text-center">
         <div class="row" id="Evenement">
@@ -181,13 +201,13 @@ Dernière modification : 15-06-2020
         <div class="row">
             <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/DSCF4743.JPG" height="245" width="245"/>
-                <h4>Mgr Alowonou</h4>
+                <h4>La prochaine JDJ </h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
                 <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/ordinationDiaconal.jpg" height="245" width="245"/>
-                <h4> Publications </h4>
+                <h4> Ordination sacerdotale </h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
 
                 <button type="button" class="btn btn-success">Lire la suite</button>
@@ -206,43 +226,34 @@ Dernière modification : 15-06-2020
             </div>
         </div>
     </div>
-<div class="container-fluid text-center" id="partie7">
+<div class="container-fluid text-left" id="partie7">
     <div class="row">
         <div class="col-12 col-xl-6 offset-xl-3">
-            <h2> Nous joindre </h2>
+            <h2> Laissez-nous un message !</h2>
             <form>
                 <div class="container-fluid">
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="inputEmail4">Courriel</label>
-                            <input type="email" class="form-control" id="inputEmail4" placeholder="Courriel">
+                            <label for="inputcourriel">Courriel</label>
+                            <input type="email" class="form-control" id="inputcourriel" placeholder="Votre courriel ">
                         </div>
                         <div class="form-group col-md-6">
-                            <label for="inputPassword4">Téléphone</label>
-                            <input type="password" class="form-control" id="inputPassword4" placeholder="Téléphone">
+                            <label for="inputNom">Votre Nom </label>
+                            <input type="text" class="form-control" id="inputNom" placeholder="Écrivez votre nom ici">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="inputAddress">Address</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-                    </div>
-                    <div class="form-group">
-                        <label for="inputAddress2">Address 2</label>
-                        <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                        <label for="inputBp" >Address postale</label>
+                        <input type="text" class="form-control" id="inputBp" placeholder="Écrivez votre adresse ici">
                     </div>
                     <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="inputCity">Ville</label>
-                            <input type="text" class="form-control" id="inputCity">
-                        </div>
                         <div class="form-group col-xl-12">
                             <label for="exampleFormControlTextarea1">Message</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                         </div>
 
                     </div>
-                    <button type="submit" class="btn
-btn-primary">Soumettre</button>
+                    <button type="submit" class="btn btn-outline-primary">Soumettre</button>
                 </div>
             </form>
         </div>
