--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -61,10 +61,10 @@ Dernière modification : 15-06-2020
             <img src="img/slie_jubile.jpg" alt="jmj Kpalime">
         </div>
         <div class="carousel-item">
-            <img src="img/diacres.png" alt="Chicago">
+            <img src="img/diacres.png" alt="Diaconie ">
         </div>
         <div class="carousel-item">
-            <img src="img/seminariste.jpg" alt="New York">
+            <img src="img/seminariste.jpg" alt="seminaristes">
         </div>
     </div>
 
@@ -145,12 +145,7 @@ Dernière modification : 15-06-2020
 
 </section>
 
-
-
-
-
-
-<section id="section3">
+<section id="SectionActualite">
     <div class="container  text-center">
         <div class="row" id="Actualites">
             <div class="col-12">
@@ -190,8 +185,8 @@ Dernière modification : 15-06-2020
         <hr>
     </div>
 </section>
-
-    <div class="container  text-center">
+<section id="SectionEvenement">
+    <div class="container  text-center p-3">
         <div class="row" id="Evenement">
             <div class="col-12">
                 <h1> Événements à venir</h1>
@@ -248,8 +243,8 @@ Dernière modification : 15-06-2020
                     </div>
                     <div class="form-row">
                         <div class="form-group col-xl-12">
-                            <label for="exampleFormControlTextarea1">Message</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            <label for="messageArea">Message</label>
+                            <textarea class="form-control" id="messageArea" placeholder="Écrivez votre adresse ici" rows="5"></textarea>
                         </div>
 
                     </div>
@@ -266,7 +261,7 @@ Dernière modification : 15-06-2020
                 </div>
                 <div class="col-lg-5 col-sm-10 logo">
                 </div>
-                <div class="col-lg-3 col-sm-10 sectionDroiteFooter"><h2>Diocèse de Kpalimé</h2>
+                <div class="col-lg-3 col-sm-10 "><h2>Diocèse de Kpalimé</h2>
                     <h5> EVECHE BP 83, Kpalimé - Togo Kpalimé</h5>
                     <h5> Tel:  +228 24 41 03 45</h5>
                     <h5> Courriel:alowonoubenoit@yahoo.fr </h5>
@@ -293,7 +288,8 @@ Dernière modification : 15-06-2020
             </div>
         </div>
     </div>
-
+    </div>
+</section>
 
 
     <script src="https://kit.fontawesome.com/a46d75ba7a.js"></script>
