--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
-index.htm
+index.html
 Komlan Albert Gblokpor-Koffi
 Albert
-Dernière modification : 15-06-2020
+Dernière modification : 15-07-2020
 -->
 
 <html lang="fr">
@@ -24,7 +24,7 @@ Dernière modification : 15-06-2020
 <nav class="navbar navbar-light bg-light navbar-expand-lg">
     <a class="navbar-brand" href="index.html"><img src="img/logo.png"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fas fa-bars"></i>
+        <img src="img/cat.png"/>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -82,18 +82,27 @@ Dernière modification : 15-06-2020
 <section id="section2">
     <div class="container-fluid text-center parallax" id="partie2">
         <div class="row">
-            <div class="col-12 col-xl-6 offset-xl-3">
-                <h1> Bienvenue dans le diocèse de Kpalimé!</h1> <br/>
+            <div class="col-12 col-xl-6 offset-xl-3 text-center">
+                <h1 class="TMQ"> Bienvenue dans le diocèse de Kpalimé!</h1> <br/>
                 <hr id="separation2">
-                <h1> Nous sommes le peuple qu"il conduit de sa main </h1>
+                <h1 class="TMQ"> Nous sommes le peuple qu"il conduit de sa main </h1>
             </div>
+            <span class="typed-cursor" style="animation-iteration-count: infinite;">
+         </span>
+            <div class="row">
+                <div class="col-lg-12 col-sm-12 text-center">
+                    <div class="typewriter">
+                        <h1 class="TMQ"> </h1>
+                    </div>
+                    <span class="typed-cursor" style="animation-iteration-count: infinite;">
+         </span>
         </div>
     </div>
 </section>
 <section id="section3">
     <div class="container-fluid text-center p-3">
         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal" >
-           Ordination sacerdotale  Samedi 8 aout 2020 <br> Cliquez pour découvrez nos futurs prêtres
+           Ordination sacerdotale : samedi 8 aout 2020 <br> Cliquez pour découvrir nos futurs prêtres
         </button>
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
