--- a/DioceseKpalime/diocese.html
+++ b/DioceseKpalime/diocese.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <!--
 index.html
-Laurent Drolet
-Dernière modification : 03-06-2020
+Komlan Albert Gblokpor-Koffi
+Albert
+Dernière modification : 15-07-2020
 -->
-<html lang="en">
+
+<html lang="fr">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bienvenue dans le diocèse de Kpalimé</title>
     <link rel="stylesheet" href="bootstrap-4.0.0-dist/css/bootstrap.css">
+    <link rel="icon" type="image/png" href="img/logo.jpg" />
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
+<header>
+
+</header>
+
 <body>
 <nav class="navbar navbar-light bg-light navbar-expand-lg">
-    <a class="navbar-brand" href="#">Logo</a>
+    <a class="navbar-brand" href="index.html"><img src="img/logo.png"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <img src="img/cat.png"/>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mx-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Accueil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Le diocèse</a>
+                <a class="nav-link" href="#">Diocèse</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Actualités</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Faire un don</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Nous joindre</a>
@@ -42,7 +45,6 @@ Dernière modification : 03-06-2020
         </ul>
     </div>
 </nav>
-
 
 <!--section caroussel- -->
 <div id="demo" class="carousel slide" data-ride="carousel">
@@ -53,17 +55,16 @@ Dernière modification : 03-06-2020
         <li data-target="#demo" data-slide-to="1"></li>
         <li data-target="#demo" data-slide-to="2"></li>
     </ul>
-
     <!-- The slideshow -->
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="img/jmj.jpg" alt="jmj Kpalime">
+            <img src="img/slie_jubile.jpg" alt="jmj Kpalime">
         </div>
         <div class="carousel-item">
-            <img src="img/Ord" alt="Ordination diaconale">
+            <img src="img/diacres.png" alt="Diaconie ">
         </div>
         <div class="carousel-item">
-            <img src="img/Banniere.jpg" alt="New York">
+            <img src="img/seminariste.jpg" alt="seminaristes">
         </div>
     </div>
 
@@ -77,84 +78,220 @@ Dernière modification : 03-06-2020
 
 </div>
 
-<div class="container-fluid text-center" id="banniere">
-    <div class="row">
-        <div class="col-xl-12">
-            <h1> Bienvenue dans le Vieux Québec !</h1>
-            <hr>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but.</p>
-            <button type="button" class="buttonTrouveSurInternet">Get started !</button>
+<!--section bannière- -->
+<section id="section2">
+    <div class="container-fluid text-center parallax" id="partie2">
+        <div class="row">
+            <div class="col-12 col-xl-6 offset-xl-3">
+                <h1> Bienvenue dans le diocèse de Kpalimé!</h1> <br/>
+                <hr id="separation2">
+                <h1> Nous sommes le peuple qu"il conduit de sa main </h1>
+            </div>
         </div>
     </div>
-</div>
-
-<div class="container-fluid text-center" id="partie2">
-    <div class="row">
-        <div class="col-12 col-xl-6 offset-xl-3">
-            <h2> Partie 2 de l'exercice !</h2>
-            <hr id="separation2">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but.</p>
-            <button type="button" class="buttonTrouveSurInternet">Get started !</button>
+</section>
+<section id="section3">
+    <div class="container-fluid text-center p-3">
+        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal" >
+            Ordination sacerdotale  Samedi 8 aout 2020 <br> Cliquez pour découvrez nos futurs prêtres
+        </button>
+    </div>
+    <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-center">Nos futurs prêtres</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <h2>Découvrez</h2><p>Nos futurs prêtres</p>
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <ul class="carousel-indicators">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                        </ul>
+                        <div class="carousel-inner"><div class="carousel-item active">
+                            <img class="img-fluid" src="img/AMEHE.png" alt="Amehe">
+                            <p>Abbé Théodore Améhé </p>
+                        </div>
+                            <div class="carousel-item">
+                                <img class="img-fluid" src="img/PaulDokpo.png" alt="Paul Dokpo">
+                                <p>Abbé Paul Dokpo </p>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="img-fluid" src="img/SetoWenceslas.png" alt="Seto Wenceslas">
+                                <p>Abbé Seto Wenceslas </p>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </a>
+                    </div>
+                    <!-- Fin du carousel -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+    </div>
 
-<div class="container text-center">
-    <div class="row" id="atYourService">
-        <div class="col-12">
-            <h3> Il était une fois!</h3>
-            <hr>
+</section>
+
+<section id="SectionActualite">
+    <div class="container  text-center">
+        <div class="row" id="Actualites">
+            <div class="col-12">
+                <h1> Actualités</h1>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6 col-xl-3  p-3">
+                <img src="img/Alowonou_Papae.jpg" height="245" width="245"/>
+                <h4>Mgr Alowonou à Rome</h4>
+                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                <button type="button" class="btn btn-success">Lire la suite</button>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3 p-3 ">
+                <img src="img/Kpalime4.jpg" height="245" width="245"/>
+                <h4> Pentécôte 2020 </h4>
+                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                <button type="button" class="btn btn-success">Lire la suite</button>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3 p-3 ">
+                <img src="img/Jubile_Argent0.jpg" height="245" width="245"/>
+                <h4> Jubilé d'Argent </h4>
+                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                <button type="button" class="btn btn-success">Lire la suite</button>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3 p-3 ">
+                <img src="img/Jubile_Argent1.jpg" height="245" width="245"/>
+                <h4> JDJ à Tohoun </h4>
+                <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                <button type="button" class="btn btn-success ">Lire la suite</button>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-12 col-md-6 col-xl-3  ">
-            <img src="img/ucao.jpg"/>
-            <h4> sous-titre</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since </p>
+    <div class="container text-center p-3">
+        <button type="button" class="btn btn-outline-secondary">Lire les autres actualtités </button>
+        <hr>
+    </div>
+</section>
+<section id="SectionEvenement">
+    <div class="container  text-center p-3">
+        <div class="row" id="Evenement">
+            <div class="col-12">
+                <h1> Événements à venir</h1>
+                <hr>
+            </div>
         </div>
-        <div class="col-12 col-md-6 col-xl-3  ">
-            <img src="img/ucao.jpg"/>
-            <h4> sous-titre</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since </p>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3  ">
-            <img src="img/ucao.jpg"/>
-            <h4> sous-titre</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since </p>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3  ">
-            <img src="img/ucao.jpg"/>
-            <h4> sous-titre</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since </p>
+        <div class="row">
+            <div class="col-12 col-md-6 col-xl-3 p-3 ">
+                <img src="img/DSCF4743.JPG" height="245" width="245"/>
+                <h4>La prochaine JDJ </h4>
+                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                <button type="button" class="btn btn-success">Lire la suite</button>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3 p-3 ">
+                <img src="img/ordinationDiaconal.jpg" height="245" width="245"/>
+                <h4> Ordination sacerdotale </h4>
+                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+
+                <button type="button" class="btn btn-success">Lire la suite</button>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3 p-3">
+                <img src="img/Jubile_Argent1.jpg" height="245" width="245"/>
+                <h4> Enseignement</h4>
+                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                <button type="button" class="btn btn-success">Lire la suite</button>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3 p-3 ">
+                <img src="img/Kpalime_MgrBarrigah.jpg" height="245" width="245"/>
+                <h4> Café spirituel</h4>
+                <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+                <button type="button" class="btn btn-success">Lire la suite</button>
+            </div>
         </div>
     </div>
-</div>
+    <div class="container-fluid text-left" id="partie7">
+        <div class="row">
+            <div class="col-12 col-xl-6 offset-xl-3">
+                <h2> Laissez-nous un message !</h2>
+                <form>
+                    <div class="container-fluid">
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputcourriel">Courriel</label>
+                                <input type="email" class="form-control" id="inputcourriel" placeholder="Votre courriel ">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputNom">Votre Nom </label>
+                                <input type="text" class="form-control" id="inputNom" placeholder="Écrivez votre nom ici">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputBp" >Address postale</label>
+                            <input type="text" class="form-control" id="inputBp" placeholder="Écrivez votre adresse ici">
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-xl-12">
+                                <label for="messageArea">Message</label>
+                                <textarea class="form-control" id="messageArea" placeholder="Écrivez votre adresse ici" rows="5"></textarea>
+                            </div>
 
-
-
-<!-- Ce sont les colonnes de plusieurs images
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12 col-md-6 col-xl-4  fondBleu">
-        <img src="img/photo.jpeg"/>
-        <div class="col-12 col-md-6 col-xl-4  fondBleu">
-            <img src="img/photo.jpeg"/>
-         </div>
-        <div class="col-12 col-md-6 col-xl-4  fondBleu">
-            <img src="img/photo.jpeg"/>
-        </div>
-        <div class="col-12 col-md-6 col-xl-4  fondBleu">
-            <img src="img/photo.jpeg"/>
-        </div>
-        <div class="col-12 col-md-6 col-xl-4  fondBleu">
-            <img src="img/photo.jpeg"/>
-        </div>
-        <div class="col-12 col-md-6 col-xl-4  fondBleu">
-            <img src="img/photo.jpeg"/>
+                        </div>
+                        <button type="submit" class="btn btn-outline-primary">Soumettre</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</div>
--->
+    <div class="piedpage">
+        <div class="container-fluid text-center">
+            <div class="row">
+                <div class="col-lg-4 col-sm-10 logo"> <img src="img/logo_cetogo.jpg"/>
+                </div>
+                <div class="col-lg-5 col-sm-10 logo">
+                </div>
+                <div class="col-lg-3 col-sm-10 "><h2>Diocèse de Kpalimé</h2>
+                    <h5> EVECHE BP 83, Kpalimé - Togo Kpalimé</h5>
+                    <h5> Tel:  +228 24 41 03 45</h5>
+                    <h5> Courriel:alowonoubenoit@yahoo.fr </h5>
+                    <div class="row">
+                        <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                            <img src="img/logo.png" alt="logo" id="piedPage"/>
+                        </div>
+                        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
+                            <i class="fab fa-twitter-square" id="Tweeter"></i>
+                        </div>
+                        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+                            <i class="fab fa-facebook-square" id="facebook"></i>
+                        </div>
+                        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+                            <i class="fab fa-instagram" id="Instagram"></i>
+                        </div>
+                        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
+                            <i class="fab fa-youtube-square" id="Youtube"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-12">
+                    <p class="piedpage">Diocèse de Kpalimé 2020 Tous droits réservés</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 <script src="https://kit.fontawesome.com/a46d75ba7a.js"></script>
 <script src="bootstrap-4.0.0-dist/js/bootstrap.js"></script>
 </body>
