--- a/DioceseKpalime/NousJoindre.html
+++ b/DioceseKpalime/NousJoindre.html
@@ -58,23 +58,23 @@ Dernière modification : 15-07-2020
                 <img src="img/Alowonou_Benoit_Buste.jpg" height="245" width="245"/>
                 <h4>Évêque de Kpalimé</h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-                <button type="button" class="btn btn-success">Lire la suite</button>
+                <button type="button" class="btn btn-success">Écrire à l'évêque</button>
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/Blaise_KPATIKO_Vicaire_Général_DiocèseKpalime.jpeg" height="245" width="245"/>
                 <h4> Vicaire général </h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-                <button type="button" class="btn btn-success">Lire la suite</button>
+                <button type="button" class="btn btn-success">Écrire au Vicaire général</button>
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/Georges_Akotia_Kpalime.jpg" height="245" width="245"/>
                 <h4> Chancelier</h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-                <button type="button" class="btn btn-success">Lire la suite</button>
+                <button type="button" class="btn btn-success">Écrire au Chancelier</button>
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-3 ">
                 <img src="img/Jules_awu.jpg" height="245" width="245"/>
-                <h4> Secrétaire particulier</h4>
+                <h4> Écrire au secrétaire </h4>
                 <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
                 <button type="button" class="btn btn-success ">Lire la suite</button>
             </div>
@@ -209,7 +209,7 @@ Dernière modification : 15-07-2020
                 <div class="col-lg-3 col-sm-10 "><h2>Diocèse de Kpalimé</h2>
                     <h5> EVECHE BP 83, Kpalimé - Togo Kpalimé</h5>
                     <h5> Tel:  +228 24 41 03 45</h5>
-                    <h5> Courriel:alowonoubenoit@yahoo.fr </h5>
+                    <h5> Courriel:admin@diocesedekpalime.tg</h5>
                     <div class="row">
                         <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                             <img src="img/logo.png" alt="logo" id="piedPage"/>
