--- a/DioceseKpalime/actualites.html
+++ b/DioceseKpalime/actualites.html
@@ -209,7 +209,7 @@ Dernière modification : 15-07-2020
                 <div class="col-lg-3 col-sm-10 "><h2>Diocèse de Kpalimé</h2>
                     <h5> EVECHE BP 83, Kpalimé - Togo Kpalimé</h5>
                     <h5> Tel:  +228 24 41 03 45</h5>
-                    <h5> Courriel:alowonoubenoit@yahoo.fr </h5>
+                    <h5> Courriel:admin@diocesedekpalime.tg</h5>
                     <div class="row">
                         <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                             <img src="img/logo.png" alt="logo" id="piedPage"/>
