--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -77,7 +77,7 @@ Dernière modification : 17-07-2020
 
 <!--section bannière- -->
 <section id="section2">
-    <div class="container-fluid text-center parallax" id="partie2">
+    <div class="container-fluid text-center parallax p-3" id="partie2">
         <div class="row">
             <div class="col-12 col-xl-6 offset-xl-3 text-center">
                 <h1 > Bienvenue dans le diocèse de Kpalimé!</h1> <br/>
@@ -216,6 +216,10 @@ Dernière modification : 17-07-2020
                 <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
         </div>
+        <div class="container text-center p-3">
+            <button type="button" class="btn btn-outline-secondary">Voir les autres événements </button>
+            <hr>
+        </div>
     </div>
 <div class="container-fluid text-left" id="partie7">
     <div class="row">
@@ -260,7 +264,7 @@ Dernière modification : 17-07-2020
                 <div class="col-lg-3 col-sm-10 "><h2>Diocèse de Kpalimé</h2>
                     <h5> EVECHE BP 83, Kpalimé - Togo Kpalimé</h5>
                     <h5> Tel:  +228 24 41 03 45</h5>
-                    <h5> Courriel:alowonoubenoit@yahoo.fr </h5>
+                    <h5> Courriel:admin@diocesedekpalime.tg</h5>
                     <div class="row">
                         <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                             <img src="img/logo.png" alt="logo" id="piedPage"/>
