--- a/DioceseKpalime/actualites.html
+++ b/DioceseKpalime/actualites.html
@@ -165,7 +165,7 @@ Dernière modification : 15-07-2020
             <button type="button" class="btn btn-outline-secondary">Lire les autres actualtités </button>
             <hr>
         </div>
-    <div class="container-fluid text-left" id="partie7">
+    <div class="container-fluid text-left" id="Messenger">
         <div class="row">
             <div class="col-12 col-xl-6 offset-xl-3">
                 <h2 id="consultation" align="center"> Demande de consultation d'un prêtre !</h2>
