--- a/DioceseKpalime/NousJoindre.html
+++ b/DioceseKpalime/NousJoindre.html
@@ -138,26 +138,26 @@ Dernière modification : 15-07-2020
                     <img src="img/Monseigneur.jpg" height="245" width="245"/>
                     <h4>Président</h4>
                     <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-                    <button type="button" class="btn btn-success">Lire la suite</button>
+                    <button type="button" class="btn btn-success">Écrire au Président</button>
                 </div>
                 <div class="col-12 col-md-6 col-xl-3 p-3 ">
                     <img src="img/ATUTONU.jpg" height="245" width="245"/>
                     <h4> Économe</h4>
                     <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
 
-                    <button type="button" class="btn btn-success">Lire la suite</button>
+                    <button type="button" class="btn btn-success">Écrire à l'économe</button>
                 </div>
                 <div class="col-12 col-md-6 col-xl-3 p-3">
                     <img src="img/Augustin_Gakpe.jpg" height="245" width="245"/>
                     <h4>Chargé de projet</h4>
                     <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-                    <button type="button" class="btn btn-success">Lire la suite</button>
+                    <button type="button" class="btn btn-success">Écrire au chargé de projet</button>
                 </div>
                 <div class="col-12 col-md-6 col-xl-3 p-3 ">
                     <img src="img/Alidjinou_Christian.jpg" height="245" width="245"/>
                     <h4> Conseiller</h4>
                     <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-                    <button type="button" class="btn btn-success">Lire la suite</button>
+                    <button type="button" class="btn btn-success">Écrire au conseiller</button>
                 </div>
             </div>
         </div>
