--- a/DioceseKpalime/actualites.html
+++ b/DioceseKpalime/actualites.html
@@ -21,11 +21,11 @@ Dernière modification : 15-07-2020
 </header>
 
 <body>
-<nav class="navbar navbar-light bg-light navbar-expand-lg">
-    <a class="navbar-brand" href="index.html"><img src="img/logo.png"/></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <img src="img/cat.png"/>
-    </button>
+    <nav class="navbar navbar-light bg-light navbar-expand-lg">
+        <a class="navbar-brand" href="index.html"><img src="img/logo.png"/></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+         <img src="img/cat.png"/>
+        </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto">
@@ -41,7 +41,7 @@ Dernière modification : 15-07-2020
             </li>
         </ul>
     </div>
-</nav>
+    </nav>
 
 </section>
 
@@ -108,7 +108,7 @@ Dernière modification : 15-07-2020
                 <button type="button" class="btn btn-success">Lire la suite</button>
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-3">
-                <img src="img/Jubile_Argent1.jpg" height="245" width="245"/>
+                <img src="img/kpalime3.jpg" height="245" width="245"/>
                 <h4>Confirmation</h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
                 <button type="button" class="btn btn-success">Lire la suite</button>
@@ -234,8 +234,6 @@ Dernière modification : 15-07-2020
             </div>
         </div>
     </div>
-
-
 
 <script src="https://kit.fontawesome.com/a46d75ba7a.js"></script>
 <script src="bootstrap-4.0.0-dist/js/bootstrap.js"></script>
