--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -2,7 +2,6 @@
 <!--
 index.html
 Komlan Albert Gblokpor-Koffi
-Albert
 Dernière modification : 17-07-2020
 -->
 
@@ -84,7 +83,8 @@ Dernière modification : 17-07-2020
                 <hr id="separation2">
                 <h1 > Nous sommes le peuple qu"il conduit de sa main </h1>
             </div>
-    </div>
+        </div>
+      </div>
 </section>
 <section id="section3">
     <div class="container-fluid text-center p-3">
@@ -138,7 +138,6 @@ Dernière modification : 17-07-2020
         </div>
     </div>
     </div>
-
 </section>
 
 <section id="SectionActualite">
@@ -246,7 +245,6 @@ Dernière modification : 17-07-2020
                             <label for="messageArea">Message</label>
                             <textarea class="form-control" id="messageArea" placeholder="Écrivez votre adresse ici" rows="5"></textarea>
                         </div>
-
                     </div>
                     <button type="submit" class="btn btn-outline-primary">Envoyez</button>
                 </div>
@@ -254,35 +252,37 @@ Dernière modification : 17-07-2020
         </div>
     </div>
 </div>
-    <div class="piedpage">
-        <div class="container-fluid text-center">
-            <div class="row">
-                <div class="col-lg-4 col-sm-10 logo"> <img src="img/logo_cetogo.jpg"/>
-                </div>
-                <div class="col-lg-5 col-sm-10 logo">
-                </div>
-                <div class="col-lg-3 col-sm-10 "><h2>Diocèse de Kpalimé</h2>
+
+<div class="piedpage">
+    <div class="container-fluid text-center">
+        <div class="row">
+            <div class="col-lg-4 col-sm-10 logo">
+                <img src="img/logo_cetogo.jpg"/>
+            </div>
+                <div class="col-lg-5 col-sm-10 logo"></div>
+                <div class="col-lg-3 col-sm-10 ">
+                    <h2>Diocèse de Kpalimé</h2>
                     <h5> EVECHE BP 83, Kpalimé - Togo Kpalimé</h5>
                     <h5> Tel:  +228 24 41 03 45</h5>
                     <h5> Courriel:admin@diocesedekpalime.tg</h5>
-                    <div class="row">
-                        <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                            <img src="img/logo.png" alt="logo" id="piedPage"/>
-                        </div>
-                        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
-                            <i class="fab fa-twitter-square" id="Tweeter"></i>
-                        </div>
-                        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
-                            <i class="fab fa-facebook-square" id="facebook"></i>
-                        </div>
-                        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
-                            <i class="fab fa-instagram" id="Instagram"></i>
-                        </div>
-                        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
-                            <i class="fab fa-youtube-square" id="Youtube"></i>
-                        </div>
-                </div>
-            </div>
+     <div class="row">
+         <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+             <img src="img/logo.png" alt="logo" id="piedPage"/>
+         </div>
+         <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
+             <i class="fab fa-twitter-square" id="Tweeter"></i>
+         </div>
+         <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+             <i class="fab fa-facebook-square" id="facebook"></i>
+         </div>
+         <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+             <i class="fab fa-instagram" id="Instagram"></i>
+         </div>
+         <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
+             <i class="fab fa-youtube-square" id="Youtube"></i>
+         </div>
+     </div>
+</div>
             <div class="col-lg-12">
                 <p class="piedpage">Diocèse de Kpalimé 2020 Tous droits réservés</p>
             </div>
@@ -290,7 +290,6 @@ Dernière modification : 17-07-2020
     </div>
     </div>
 </section>
-
 
     <script src="https://kit.fontawesome.com/a46d75ba7a.js"></script>
 <script src="bootstrap-4.0.0-dist/js/bootstrap.js"></script>
