--- a/DioceseKpalime/NousJoindre.html
+++ b/DioceseKpalime/NousJoindre.html
@@ -109,7 +109,7 @@ Dernière modification : 15-07-2020
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-3">
                 <img src="img/Blaise_KPATIKO_Vicaire_Général_DiocèseKpalime.jpeg" height="245" width="245"/>
-                <h4>Secretaire</h4>
+                <h4>Secrétaire</h4>
                 <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
                 <button type="button" class="btn btn-success">Contactez le secrétaire</button>
             </div>
