--- a/DioceseKpalime/NousJoindre.html
+++ b/DioceseKpalime/NousJoindre.html
@@ -145,7 +145,7 @@ Dernière modification : 15-07-2020
                     <h4> Économe</h4>
                     <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
 
-                    <button type="button" class="btn btn-success">Écrire à l'économe</button>
+                    <button type="button" class="btn btn-success">Écrire à l'Économe</button>
                 </div>
                 <div class="col-12 col-md-6 col-xl-3 p-3">
                     <img src="img/Augustin_Gakpe.jpg" height="245" width="245"/>
