--- a/DioceseKpalime/NousJoindre.html
+++ b/DioceseKpalime/NousJoindre.html
@@ -76,7 +76,7 @@ Dernière modification : 15-07-2020
                 <img src="img/Jules_awu.jpg" height="245" width="245"/>
                 <h4> Écrire au secrétaire </h4>
                 <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-                <button type="button" class="btn btn-success ">Lire la suite</button>
+                <button type="button" class="btn btn-success ">Écrire au Secrétaire</button>
             </div>
         </div>
     </div>
