--- a/DioceseKpalime/NousJoindre.html
+++ b/DioceseKpalime/NousJoindre.html
@@ -33,7 +33,7 @@ Dernière modification : 15-07-2020
                 <a class="nav-link" href="index.html">Accueil</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="#actualites.html">Actualités</a>
+                <a class="nav-link" href="actualites.html">Actualités</a>
             </li>
             </li>
             <li class="nav-item active">
