--- a/ExercicePortailCegepThetfordMine/FormulaireEnvoye.html
+++ b/ExercicePortailCegepThetfordMine/FormulaireEnvoye.html
@@ -15,6 +15,7 @@ Dernière modification : 15-06-2020
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
     </script>
+    <script type="text/javascript" src="https://form.jotform.com/jsform/202667790823261"></script>
 </head>
 
 <body>
@@ -54,7 +55,9 @@ Dernière modification : 15-06-2020
     <div class="container-fluid">
         <div class="row">
             <div>
-                <h1>Les données du formulaires ont été envoyées avec succès </h1>
+                <h1>L
+
+                </h1>
             </div>
         </div>
     </div>
