--- a/Komlan-Gblokpor-Koffi_Examen2/index.html
+++ b/Komlan-Gblokpor-Koffi_Examen2/index.html
@@ -2,14 +2,14 @@
 <!--
 index.html
 Komlan Albert Gblokpor-Koffi
-Dernière modification : 17-07-2020
+Dernière modification : 23-10-2020
 -->
 
 <html lang="fr">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
-    <title>Bienvenue dans le diocèse de Kpalimé</title>
+    <title>Bienvenue mission mars</title>
     <link rel="stylesheet" href="bootstrap-4.0.0-dist/css/bootstrap.css">
     <link rel="icon" type="image/png" href="img/logo.jpg" />
     <link rel="stylesheet" href="css/style.css">
@@ -30,7 +30,7 @@ Dernière modification : 17-07-2020
                 <div class="container-fluid">
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="inputcourriel">Courriel</label>
+                            <label for="inputcourriel">Identification </label>
                             <input type="email" class="form-control" id="inputcourriel" placeholder="Votre courriel ">
                         </div>
                         <div class="form-group col-md-6">
@@ -48,52 +48,13 @@ Dernière modification : 17-07-2020
                             <textarea class="form-control" id="messageArea" placeholder="Écrivez votre adresse ici" rows="5"></textarea>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-outline-primary">Envoyez</button>
+                    <button type="submit" class="btn btn-outline-primary">Soumettre ma candidature </button>
                 </div>
             </form>
         </div>
     </div>
 </div>
-
-<div class="piedpage">
-    <div class="container-fluid text-center">
-        <div class="row">
-            <div class="col-lg-4 col-sm-10 logo">
-                <img src="img/logo_cetogo.jpg"/>
-            </div>
-                <div class="col-lg-5 col-sm-10 logo"></div>
-                <div class="col-lg-3 col-sm-10 ">
-                    <h2>Diocèse de Kpalimé</h2>
-                    <h5> EVECHE BP 83, Kpalimé - Togo Kpalimé</h5>
-                    <h5> Tel:  +228 24 41 03 45</h5>
-                    <h5> Courriel:admin@diocesedekpalime.tg</h5>
-     <div class="row">
-         <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-             <img src="img/logo.png" alt="logo" id="piedPage"/>
-         </div>
-         <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
-             <i class="fab fa-twitter-square" id="Tweeter"></i>
-         </div>
-         <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
-             <i class="fab fa-facebook-square" id="facebook"></i>
-         </div>
-         <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
-             <i class="fab fa-instagram" id="Instagram"></i>
-         </div>
-         <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
-             <i class="fab fa-youtube-square" id="Youtube"></i>
-         </div>
-     </div>
-</div>
-            <div class="col-lg-12">
-                <p class="piedpage">Diocèse de Kpalimé 2020 Tous droits réservés</p>
-            </div>
-        </div>
-    </div>
-    </div>
-</section>
-
-    <script src="https://kit.fontawesome.com/a46d75ba7a.js"></script>
+ <script src="https://kit.fontawesome.com/a46d75ba7a.js"></script>
 <script src="bootstrap-4.0.0-dist/js/bootstrap.js"></script>
 </body>
 </html>
