--- a/Komlan-Gblokpor-Koffi_Examen2/PratiqueExamenFormulaire.html
+++ b/Komlan-Gblokpor-Koffi_Examen2/PratiqueExamenFormulaire.html
@@ -66,12 +66,11 @@
     <input id="courriel" type="email" required>
 
     <br>
-
-    <label for="telephone" >Numéro de téléphone* :</label>
-    <input id="telephone" type="text" required pattern="[0-9]{4}-[0-9]{3}--[0-9]{1}/[A-Z]">
+   <!-- <label for="telephone" >Numéro de téléphone* :</label>
+    <input id="telephone" type="text"  pattern="[0-9]{4}-[0-9]{3}--[0-9]{1}/[A-Z]">
 
     <br>
-
+-->
 
     <input type="submit" value="Soumettre le formulaire">
 
